[package]
name = "tsqlust"
version = "0.1.0"
authors = ["Taryn Hill <taryn@phrohdoh.com>"]
description = "Human-friendly T-SQL"
readme = "README.md"
repository = "https://github.com/Phrohdoh/tsqlust"
license = "GPLv3"
exclude = ["examples/*", "tests/**"]
keywords = ["tsql", "sql", "static analysis"]

[dependencies]
pest = "0.4.0"